openam-node1/service-openam.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openam-node1
    name: openam-node1
  name: openam-node1
spec:
  clusterIP: 10.0.0.9
  externalTrafficPolicy: Cluster
  ports:
  - name: ldap
    nodePort: 32056
    port: 1389
    protocol: TCP
    targetPort: 1389
  - name: ldaps
    nodePort: 31897
    port: 1636
    protocol: TCP
    targetPort: 1636
  - name: http
    nodePort: 30089
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31364
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: openam-node1
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
