openam-node1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openam-node1
  labels:
    name: openam-node1
    app: openam-node1
spec:
  ports:
  - port: 1389
    name: ldap
  - port: 1636
    name: ldaps
  - port: 8080
    name: http
    nodePort: 30089
  - port: 8443
    name: https
  selector:
    app: openam-node1
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
